Build structure cleanup; new L&F